# Lumine

./: .gitignore  README.md  pack.bat  pack_release.ps1  pyproject.toml
.lumine/: config.json
src/: lumine.py
src/Backend/: AWCCThermal.py  AWCCWmiWrapper.py  Configuration.py  DetectHardware.py
src/Languages/: en_US.py  hi_IN.py  ja_JP.py  ko_KR.py  ru_RU.py  zh_CN.py  zh_TW.py
